added logo and smal changes

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 <body>
     <div class="bg-hero">
         <header class="header">
-            <h2 class="logo text-28"><a class="logo text-28" href="./index.html">Прочно</a></h2>
+            <a class="logo text-28" href="./index.html"><img src="./images/logo-w.svg" alt="Прочно"></a>
             <ul class="nav">
                 <li class="text-20"><a class="text-20" href="./projects.html">Проекты</a></li>
                 <li class="text-20"><a class="text-20" href="./gallery.html">Галерея</a></li>
@@ -80,7 +80,7 @@
             </div>
         </div>
         <div class="about-container-text">
-            <h2 class="text-42 align-left">Модульный дом — это</h2>
+            <h2 class="text-42 align-left">Каркасный дом — это</h2>
             <div class="about-info-wrapper">
                 <div class="about-info">
                     <p class="green-text">Экономия. На 40-50% дешевле кирпичного или каменного</p>
@@ -133,7 +133,7 @@
                         <div class="project-container">
                             <div class="project-card-container">
                                 <p class="project-card-text">Дата постройки:</p>
-                                <p class="project-card-text weight-500">октябрь 2024г.</p>
+                                <p class="project-card-text weight-500">4 октября 2024г.</p>
                             </div>
                             <div class="project-card-container  ">
                                 <p class="project-card-text">Технология <br />
@@ -243,7 +243,7 @@
                         <div class="project-container">
                             <div class="project-card-container">
                                 <p class="project-card-text">Дата постройки:</p>
-                                <p class="project-card-text weight-500">май 2024г.</p>
+                                <p class="project-card-text weight-500">15 мая 2024г.</p>
                             </div>
                             <div class="project-card-container  ">
                                 <p class="project-card-text">Технология <br />
@@ -353,7 +353,7 @@
                         <div class="project-container">
                             <div class="project-card-container">
                                 <p class="project-card-text">Дата постройки:</p>
-                                <p class="project-card-text weight-500">апрель 2024г.</p>
+                                <p class="project-card-text weight-500"> 8 апреля 2024г.</p>
                             </div>
                             <div class="project-card-container  ">
                                 <p class="project-card-text">Технология <br />
@@ -462,11 +462,7 @@
     </section>
     <section class="green-bg">
         <h2 class="text-42 text-white">Почему мы?</h2>
-        <p class="about-us-text text-white">Мы занимаемся проектированием&nbsp;и строительством домов
-            по&nbsp;быстровозводимым
-            технологиям более 4х&nbsp;лет. За это
-            время мы максимально оптимизировали проекты, сборку и&nbsp;комплектации, для&nbsp;удовлетворения всех Ваших
-            потребностей. Мы обеспечиваем гарантии качества и&nbsp;надежность Вашего дома!</p>
+        <p class="about-us-text text-white">Мы&nbsp;занимаемся проектированием и&nbsp;строительством домов по&nbsp;каркасной технологии более 5х&nbsp;лет. За&nbsp;это время мы&nbsp;максимально оптимизировали проекты, сборку и&nbsp;комплектации, для&nbsp;удовлетворения всех Ваших потребностей. Мы&nbsp;обеспечиваем гарантии качества и&nbsp;надежность Вашего&nbsp;дома!</p>
         <p class="text-24 text-white">Нас выбирают по&nbsp;нескольким причинам:</p>
         <div class="about-us-container">
             <div class="info-card about-us-card">
@@ -487,10 +483,8 @@
             </div>
             <div class="info-card about-us-card">
                 <p class="info-card_title text-white">Время</p>
-                <p class="info-card_text text-white">Производство осуществляется за 3-5 недель, в&nbsp;зависимости от
-                    размера
-                    проекта. Монтаж составляет 5-7&nbsp;дней. Переехать в&nbsp;свой новый дом Вы можете уже
-                    в&nbsp;следующем месяце</p>
+                <p class="info-card_text text-white">Производство осуществляется за 2-4 месяца, в&nbsp;зависимости от
+                    размера проекта</p>
             </div>
             <div class="info-card about-us-card">
                 <p class="info-card_title text-white">Долговечность</p>
