--- a/policy.html
+++ b/policy.html
@@ -15,7 +15,7 @@
 
 <body>
     <header class="header">
-        <h2 class="logo text-28 text-black"><a class="logo text-28 text-black" href="./index.html">Прочно</a></h2>
+        <a class="logo text-28" href="./index.html"><img src="./images/logo.svg" alt="Прочно"></a>
         <ul class="nav">
             <li class="text-20 text-black"><a class="text-20 text-black" href="./projects.html">Проекты</a></li>
             <li class="text-20 text-black"><a class="text-20 text-black" href="./gallery.html">Галерея</a></li>
