--- a/projects.html
+++ b/projects.html
@@ -18,7 +18,7 @@
 
 <body>
     <header class="header">
-        <h2 class="logo text-28 text-black"><a class="logo text-28 text-black" href="./index.html">Прочно</a></h2>
+        <a class="logo text-28" href="./index.html"><img src="./images/logo.svg" alt="Прочно"></a>
         <ul class="nav">
             <li class="text-20 text-black"><a class="text-20 text-black nav-underline"
                     href="./projects.html">Проекты</a></li>
@@ -44,7 +44,7 @@
                         <div class="project-container">
                             <div class="project-card-container">
                                 <p class="project-card-text">Дата постройки:</p>
-                                <p class="project-card-text weight-500">октябрь 2024г.</p>
+                                <p class="project-card-text weight-500">21 октября 2024г.</p>
                             </div>
                             <div class="project-card-container  ">
                                 <p class="project-card-text">Технология <br />
@@ -154,7 +154,7 @@
                         <div class="project-container">
                             <div class="project-card-container">
                                 <p class="project-card-text">Дата постройки:</p>
-                                <p class="project-card-text weight-500">май 2024г.</p>
+                                <p class="project-card-text weight-500">12 мая 2024г.</p>
                             </div>
                             <div class="project-card-container  ">
                                 <p class="project-card-text">Технология <br />
@@ -265,7 +265,7 @@
                         <div class="project-container">
                             <div class="project-card-container">
                                 <p class="project-card-text">Дата постройки:</p>
-                                <p class="project-card-text weight-500">апрель 2024г.</p>
+                                <p class="project-card-text weight-500">10 апреля 2024г.</p>
                             </div>
                             <div class="project-card-container  ">
                                 <p class="project-card-text">Технология <br />
@@ -372,7 +372,7 @@
                         <div class="project-container">
                             <div class="project-card-container">
                                 <p class="project-card-text">Дата постройки:</p>
-                                <p class="project-card-text weight-500">апрель 2024г.</p>
+                                <p class="project-card-text weight-500">21 апреля 2024г.</p>
                             </div>
                             <div class="project-card-container  ">
                                 <p class="project-card-text">Технология <br />
@@ -479,7 +479,7 @@
                         <div class="project-container">
                             <div class="project-card-container">
                                 <p class="project-card-text">Дата постройки:</p>
-                                <p class="project-card-text weight-500">январь 2024г.</p>
+                                <p class="project-card-text weight-500">11 января 2024г.</p>
                             </div>
                             <div class="project-card-container  ">
                                 <p class="project-card-text">Технология <br />
@@ -580,7 +580,7 @@
                         <div class="project-container">
                             <div class="project-card-container">
                                 <p class="project-card-text">Дата постройки:</p>
-                                <p class="project-card-text weight-500">февраль 2024г.</p>
+                                <p class="project-card-text weight-500">17 февраля 2024г.</p>
                             </div>
                             <div class="project-card-container">
                                 <p class="project-card-text">Технология <br />
