--- a/index.html
+++ b/index.html
@@ -468,7 +468,7 @@
     </section>
     <section class="green-bg">
         <h2 class="text-42 text-white">Почему мы?</h2>
-        <p class="about-us-text text-white">Мы&nbsp;занимаемся проектированием и&nbsp;строительством домов по&nbsp;каркасной технологии более 5х&nbsp;лет. За&nbsp;это время мы&nbsp;максимально оптимизировали проекты, сборку и&nbsp;комплектации, для&nbsp;удовлетворения всех Ваших потребностей. Мы&nbsp;обеспечиваем гарантии качества и&nbsp;надежность Вашего&nbsp;дома!</p>
+        <p class="about-us-text text-white">Мы&nbsp;занимаемся проектированием и&nbsp;строительством домов по&nbsp;каркасной технологии более 5&nbsp;лет. За&nbsp;это время мы&nbsp;максимально оптимизировали проекты, сборку и&nbsp;комплектации, для&nbsp;удовлетворения всех Ваших потребностей. Мы&nbsp;обеспечиваем гарантии качества и&nbsp;надежность Вашего&nbsp;дома!</p>
         <p class="text-24 text-white">Нас выбирают по&nbsp;нескольким причинам:</p>
         <div class="about-us-container">
             <div class="info-card about-us-card">
